--- a/kubernetes/apps/default/zwave/app/helmrelease.yaml
+++ b/kubernetes/apps/default/zwave/app/helmrelease.yaml
@@ -68,16 +68,17 @@ spec:
             port: *port
           websocket:
             port: 3000
-    ingress:
+    route:
       app:
-        className: internal
-        hosts:
-          - host: "{{ .Release.Name }}.goyangi.cloud"
-            paths:
-              - path: /
-                service:
-                  identifier: app
-                  port: http
+        hostnames: ["{{ .Release.Name }}.devbu.io"]
+        parentRefs:
+          - name: internal
+            namespace: kube-system
+            sectionName: https
+        rules:
+          - backendRefs:
+              - name: *app
+                port: *port
     persistence:
       config:
         existingClaim: zwave
