--- a/kubernetes/apps/network/echo/ks.yaml
+++ b/kubernetes/apps/network/echo/ks.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app echo
-  namespace: &namespace default
+  namespace: &namespace network
 spec:
   commonMetadata:
     labels:
@@ -11,7 +11,7 @@ spec:
   components:
     - ../../../../components/gatus/external
   interval: 1h
-  path: ./kubernetes/apps/default/echo/app
+  path: ./kubernetes/apps/network/echo/app
   postBuild:
     substitute:
       APP: *app
