--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -6,7 +6,11 @@ components:
   - ../../components/common
   - ../../components/repos/app-template
 resources:
+  - ./echo/ks.yaml
   - ./ingress-nginx-unifi/ks.yaml
   - ./external-dns-unifi/ks.yaml
   # NOTE: Try multus for IoT VLAN bridging when managed switch, allows hass on VLAN to mDNS cast and as host network
   # - ./multus/ks.yaml
+  - ./cloudflare-tunnel/ks.yaml
+  - ./external-dns-cloudflare/ks.yaml
+  - ./ingress-nginx-cloudflare/ks.yaml
