--- a/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -39,11 +39,14 @@ spec:
         forceConflicts: true
     cleanPrometheusOperatorObjectNames: true
     alertmanager:
-      ingress:
-        enabled: true
-        ingressClassName: internal
-        hosts: ["alertmanager.goyangi.cloud"]
-        pathType: Prefix
+      route:
+         main:
+           enabled: true
+           hostnames: ["alertmanager.goyangi.cloud"]
+           parentRefs:
+             - name: internal
+               namespace: kube-system
+               sectionName: https
       alertmanagerSpec:
         alertmanagerConfiguration:
           name: alertmanager
@@ -64,11 +67,14 @@ spec:
     kubeProxy:
       enabled: false
     prometheus:
-      ingress:
-        enabled: true
-        ingressClassName: internal
-        hosts: ["prometheus.goyangi.cloud"]
-        pathType: Prefix
+      route:
+         main:
+           enabled: true
+           hostnames: ["prometheus.goyangi.cloud"]
+           parentRefs:
+             - name: internal
+               namespace: kube-system
+               sectionName: https
       prometheusSpec:
         podMonitorSelectorNilUsesHelmValues: false
         probeSelectorNilUsesHelmValues: false
