--- a/kubernetes/apps/default/kopia/app/helmrelease.yaml
+++ b/kubernetes/apps/default/kopia/app/helmrelease.yaml
@@ -53,7 +53,7 @@ spec:
                 spec:
                   httpGet:
                     path: /
-                    port: 80
+                    port: &port 80
                   initialDelaySeconds: 30
                   periodSeconds: 30
                   timeoutSeconds: 10
