--- a/kubernetes/apps/default/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/default/minio/app/helmrelease.yaml
@@ -47,7 +47,7 @@ spec:
                 spec:
                   httpGet:
                     path: /minio/health/live
-                    port: 9000
+                    port: &port 9000
                   initialDelaySeconds: 30
                   periodSeconds: 30
                   timeoutSeconds: 10
