--- a/kubernetes/apps/default/thelounge/app/helmrelease.yaml
+++ b/kubernetes/apps/default/thelounge/app/helmrelease.yaml
@@ -38,10 +38,6 @@ spec:
                 spec:
                   failureThreshold: 30
                   periodSeconds: 5
-            # securityContext:
-            #   allowPrivilegeEscalation: false
-            #   readOnlyRootFilesystem: true
-            #   capabilities: {drop: ["ALL"]}
             resources:
               requests:
                 cpu: 10m
@@ -53,7 +49,7 @@ spec:
         controller: *app
         ports:
           http:
-            port: 9000
+            port: &port 9000
     route:
       app:
         hostnames: ["{{ .Release.Name }}.goyangi.cloud"]
