--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -28,10 +28,6 @@ spec:
       createPrometheusRules: true
     toolbox:
       enabled: true
-      resources:
-        requests:
-          cpu: 10m
-          memory: 10Mi
     cephClusterSpec:
       cephConfig:
         global:
@@ -39,8 +35,6 @@ spec:
           bdev_async_discard_threads: "1" # quote
           osd_class_update_on_start: "false" # quote
           device_failure_prediction_mode: local # requires mgr module
-      mon:
-        count: 1
       crashCollector:
         disable: false
       dashboard:
@@ -49,7 +43,6 @@ spec:
         ssl: false
         prometheusEndpoint: http://prometheus-operated.observability.svc.cluster.local:9090
       mgr:
-        count: 1
         modules:
           - name: diskprediction_local
             enabled: true
@@ -66,66 +59,15 @@ spec:
       storage:
         useAllNodes: true
         useAllDevices: false
-        # TODO: change this after disks arrive!
-        devicePathFilter: /dev/disk/by-id/nvme-SAMSUNG_MZVLQ256HAJD-000H1_.*
-        # devicePathFilter: /dev/disk/by-id/sata-SAMSUNG
+        devicePathFilter: /dev/disk/by-id/sata.*
         config:
           osdsPerDevice: "1"
-      resources:
-        mgr:
-          requests:
-            # cpu: 100m
-            cpu: 10m
-            # memory: 512Mi
-            memory: 10Mi
-          limits:
-            memory: 2Gi
-        mon:
-          requests:
-            # cpu: 50m
-            cpu: 10m
-            # memory: 512Mi
-            memory: 10Mi
-          limits:
-            memory: 1Gi
-        osd:
-          requests:
-            # cpu: 200m
-            cpu: 10m
-            # memory: 2Gi
-            memory: 10Mi
-          limits:
-            memory: 6Gi
-        prepareosd:
-          requests:
-            cpu: 10m
-            memory: 10Mi
-        mgr-sidecar:
-          requests:
-            # cpu: 50m
-            cpu: 10m
-            # memory: 128Mi
-            memory: 10Mi
-          limits:
-            memory: 256Mi
-        crashcollector:
-          requests:
-            cpu: 10m
-        logcollector:
-          requests:
-            cpu: 10m
-        cleanup:
-          requests:
-            cpu: 10m
-        exporter:
-          requests:
-            cpu: 10m
     cephBlockPools:
       - name: ceph-blockpool
         spec:
           failureDomain: osd
           replicated:
-            size: 1
+            size: 3
         storageClass:
           enabled: true
           name: ceph-block
