--- a/kubernetes/apps/kube-system/snapshot-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/snapshot-controller/app/helmrelease.yaml
@@ -23,7 +23,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: piraeus
-        namespace: flux-system
+        namespace: kube-system
   install:
     crds: CreateReplace
     remediation:
