--- a/kubernetes/apps/network/unifi-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/unifi-dns/app/helmrelease.yaml
@@ -1,4 +1,14 @@
 ---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: unifi-dns
+  namespace: network # Required for Renovate lookups
+spec:
+  interval: 12h
+  url: https://kubernetes-sigs.github.io/external-dns
+---
 # yaml-language-server: $schema=https://kubernetes-schemas.solanyn.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -12,8 +22,8 @@ spec:
       version: 1.15.2
       sourceRef:
         kind: HelmRepository
-        name: external-dns
-        namespace: flux-system
+        name: unifi-dns
+        namespace: network
   install:
     remediation:
       retries: 3
