--- a/kubernetes/apps/default/zwave/app/helmrelease.yaml
+++ b/kubernetes/apps/default/zwave/app/helmrelease.yaml
@@ -70,7 +70,7 @@ spec:
             port: 3000
     route:
       app:
-        hostnames: ["{{ .Release.Name }}.devbu.io"]
+        hostnames: ["{{ .Release.Name }}.goyangi.cloud"]
         parentRefs:
           - name: internal
             namespace: kube-system
