--- a/kubernetes/apps/network/cloudflare-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/cloudflare-dns/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   interval: 12h
   url: https://kubernetes-sigs.github.io/external-dns
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.solanyn.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -36,27 +36,31 @@ spec:
       retries: 3
   values:
     fullnameOverride: *app
-    provider:
-      name: cloudflare
+    provider: cloudflare
     env:
       - name: &name CF_API_TOKEN
         valueFrom:
           secretKeyRef:
-            name: &secret external-external-dns-secret
+            name: &secret cloudflare-dns-secret
+            key: *name
+      - name: &name CF_ZONE_ID
+        valueFrom:
+          secretKeyRef:
+            name: *secret
             key: *name
     extraArgs:
       - --cloudflare-dns-records-per-page=1000
       - --cloudflare-proxied
       - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
       - --crd-source-kind=DNSEndpoint
-      - --ignore-ingress-tls-spec
-      - --ingress-class=external
+      - --gateway-label-filter=gateway==external
+      - --zone-id-filter=$(CF_ZONE_ID)
     triggerLoopOnEvent: true
     policy: sync
-    sources: ["crd", "ingress"]
+    sources: ["crd", "gateway-httproute"]
     txtOwnerId: default
     txtPrefix: k8s.
-    domainFilters: ["goyangi.cloud", "solanyn.dev"]
+    domainFilters: ["goyangi.cloud"]
     serviceMonitor:
       enabled: true
     podAnnotations:
