fix: secret name

--- a/kubernetes/apps/network/unifi-dns/app/externalsecret.yaml
+++ b/kubernetes/apps/network/unifi-dns/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: internal-external-dns
+  name: unifi-dns
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: internal-external-dns-secret
+    name: unifi-dns-secret
     template:
       data:
         UNIFI_API_KEY: "{{ .UNIFI_API_KEY }}"
