--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -28,6 +28,10 @@ spec:
       createPrometheusRules: true
     toolbox:
       enabled: true
+      resources:
+        requests:
+          cpu: 10m
+          memory: 10Mi
     cephClusterSpec:
       cephConfig:
         global:
@@ -35,6 +39,8 @@ spec:
           bdev_async_discard_threads: "1" # quote
           osd_class_update_on_start: "false" # quote
           device_failure_prediction_mode: local # requires mgr module
+      mon:
+        count: 1
       crashCollector:
         disable: false
       dashboard:
@@ -43,6 +49,7 @@ spec:
         ssl: false
         prometheusEndpoint: http://prometheus-operated.observability.svc.cluster.local:9090
       mgr:
+        count: 1
         modules:
           - name: diskprediction_local
             enabled: true
@@ -86,7 +93,7 @@ spec:
             # memory: 2Gi
             memory: 10Mi
           limits:
-            memory: 3Gi
+            memory: 6Gi
         prepareosd:
           requests:
             cpu: 10m
@@ -116,7 +123,7 @@ spec:
         spec:
           failureDomain: osd
           replicated:
-            size: 3
+            size: 1
         storageClass:
           enabled: true
           name: ceph-block
