--- a/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
@@ -24,6 +24,11 @@ dashboards:
 enableIPv4BIGTCP: true
 endpointRoutes:
   enabled: true
+envoy:
+  rollOutPods: true
+  securityContext:
+    capabilities:
+      envoy: [NET_ADMIN, PERFMON, BPF]
 gatewayAPI:
   enabled: true
   enableAlpn: true
@@ -49,7 +54,6 @@ operator:
     enabled: true
     serviceMonitor:
       enabled: true
-  # TODO: update to 2 when >1 node
   replicas: 1
   rollOutPods: true
 prometheus:
@@ -67,7 +71,6 @@ securityContext:
       - NET_ADMIN
       - NET_RAW
       - IPC_LOCK
-      - SYS_ADMIN
       - SYS_RESOURCE
       - PERFMON
       - BPF
@@ -77,5 +80,6 @@ securityContext:
       - SETUID
     cleanCiliumState:
       - NET_ADMIN
-      - SYS_ADMIN
       - SYS_RESOURCE
+      - PERFMON
+      - BPF
