chore: update lb ips

--- a/kubernetes/apps/default/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/default/plex/app/helmrelease.yaml
@@ -73,7 +73,7 @@ spec:
         controller: plex
         type: LoadBalancer
         annotations:
-          lbipam.cilium.io/ips: 192.168.1.128
+          lbipam.cilium.io/ips: 192.168.1.128, ::ffff:192.168.1.128
         ports:
           http:
             port: &port 32400
