--- a/kubernetes/apps/database/emqx/cluster/cluster.yaml
+++ b/kubernetes/apps/database/emqx/cluster/cluster.yaml
@@ -48,6 +48,6 @@ spec:
   listenersServiceTemplate:
     metadata:
       annotations:
-        lbipam.cilium.io/ips: 192.168.1.129
+        lbipam.cilium.io/ips: 192.168.1.129, ::ffff:192.168.1.129
     spec:
       type: LoadBalancer
