--- a/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
+++ b/kubernetes/apps/default/go2rtc/app/helmrelease.yaml
@@ -63,7 +63,7 @@ spec:
         type: LoadBalancer
         annotations:
           external-dns.alpha.kubernetes.io/hostname: go2rtc-streams.goyangi.cloud
-          lbipam.cilium.io/ips: 192.168.1.124
+          lbipam.cilium.io/ips: 192.168.1.124, ::ffff:192.168.1.124
         ports:
           http:
             primary: true
