--- a/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
@@ -93,7 +93,7 @@ spec:
         controller: qbittorrent
         type: LoadBalancer
         annotations:
-          lbipam.cilium.io/ips: 192.168.1.122
+          lbipam.cilium.io/ips: 192.168.1.122, ::ffff:192.168.1.122
         ports:
           http:
             primary: true
