--- a/kubernetes/apps/default/slskd/app/helmrelease.yaml
+++ b/kubernetes/apps/default/slskd/app/helmrelease.yaml
@@ -73,7 +73,7 @@ spec:
         controller: slskd
         type: LoadBalancer
         annotations:
-          lbipam.cilium.io/ips: 192.168.1.127
+          lbipam.cilium.io/ips: 192.168.1.127, ::ffff:192.168.1.127
         ports:
           http:
             primary: true
