--- a/kubernetes/apps/kube-system/cilium/gateway/external.yaml
+++ b/kubernetes/apps/kube-system/cilium/gateway/external.yaml
@@ -19,14 +19,14 @@ spec:
     annotations:
       external-dns.alpha.kubernetes.io/hostname: *hostname
   listeners:
-    - name: goyangi-cloud-http
+    - name: http
       protocol: HTTP
       port: 80
       hostname: "*.goyangi.cloud"
       allowedRoutes:
         namespaces:
           from: All
-    - name: goyangi-cloud-https
+    - name: https
       protocol: HTTPS
       port: 443
       hostname: "*.goyangi.cloud"
@@ -37,14 +37,14 @@ spec:
         certificateRefs:
           - kind: Secret
             name: goyangi-cloud-tls
-    - name: solanyn-dev-http
+    - name: sol-http
       protocol: HTTP
       port: 80
       hostname: "*.solanyn.dev"
       allowedRoutes:
         namespaces:
           from: All
-    - name: solanyn-dev-https
+    - name: sol-https
       protocol: HTTPS
       port: 443
       hostname: "*.solanyn.dev"
