fix: add default backend ref

--- a/kubernetes/apps/default/your-spotify/app/helmrelease.yaml
+++ b/kubernetes/apps/default/your-spotify/app/helmrelease.yaml
@@ -110,6 +110,9 @@ spec:
             backendRefs:
               - name: server
                 port: *port
+          - backendRefs:
+              - name: *app
+                port: *port
     ingress:
       app:
         className: external
