chore: set your-spotify to internal

--- a/kubernetes/apps/default/your-spotify/app/helmrelease.yaml
+++ b/kubernetes/apps/default/your-spotify/app/helmrelease.yaml
@@ -92,7 +92,7 @@ spec:
       app:
         hostnames: ["spotify.goyangi.cloud"]
         parentRefs:
-          - name: external
+          - name: internal
             namespace: kube-system
             sectionName: https
         rules:
