--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -79,7 +79,9 @@ spec:
             port: 12321
     route:
       app:
-        hostnames: ["hass.goyangi.cloud"]
+        hostnames:
+          - "{{ .Release.Name }}.goyangi.cloud"
+          - hass.goyangi.cloud
         parentRefs:
           - name: internal
             namespace: kube-system
