--- a/kubernetes/apps/default/your-spotify/app/helmrelease.yaml
+++ b/kubernetes/apps/default/your-spotify/app/helmrelease.yaml
@@ -90,7 +90,9 @@ spec:
             port: 27017
     route:
       app:
-        hostnames: ["spotify.goyangi.cloud"]
+        hostnames:
+          - "{{ .Release.Name }}.goyangi.cloud"
+          - spotify.goyangi.cloud
         parentRefs:
           - name: internal
             namespace: kube-system
