--- a/kubernetes/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/gatus/app/helmrelease.yaml
@@ -101,7 +101,9 @@ spec:
             scrapeTimeout: 10s
     route:
       app:
-        hostnames: ["status.goyangi.cloud"]
+        hostnames:
+          - "{{ .Release.Name }}.goyangi.cloud"
+          - status.goyangi.cloud
         parentRefs:
           - name: external
             namespace: kube-system
