--- a/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
+++ b/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
@@ -22,15 +22,15 @@ spec:
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
         MAIL_FROM: "{{ .SMTP_USERNAME }}"
         SMTP_URL: "smtp://{{ .SMTP_USERNAME }}:{{ .SMTP_PASSWORD }}@{{ .SMTP_SERVER }}:587"
-        STORAGE_ENDPOINT: minio.default.svc.cluster.local
-        STORAGE_PORT: "9000"
-        STORAGE_BUCKET: reactive-resume
-        STORAGE_ACCESS_KEY: "{{ .MINIO_ROOT_USER }}"
-        STORAGE_SECRET_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
+        STORAGE_ENDPOINT: https://25450dc0f239d4e727e3488cfb31b5c4.r2.cloudflarestorage.com
+        STORAGE_PORT: "443"
+        STORAGE_BUCKET: assets
+        STORAGE_ACCESS_KEY: "{{ .AWS_ACCESS_KEY_ID }}"
+        STORAGE_SECRET_KEY: "{{ .AWS_SECRET_ACCESS_KEY }}"
         DISABLE_SIGNUPS: "true"
         VITE_OPENID_NAME: Pocket ID
         OPENID_AUTHORIZATION_URL: https://id.goyangi.cloud/authorize
-        OPENID_CALLBACK_URL: https://cv.goyangi.cloud/api/auth/openid/callback
+        OPENID_CALLBACK_URL: https://rx.goyangi.cloud/api/auth/openid/callback
         OPENID_CLIENT_ID: "{{ .REACTIVE_RESUME_CLIENT_ID }}"
         OPENID_CLIENT_SECRET: "{{ .REACTIVE_RESUME_CLIENT_SECRET }}"
         OPENID_ISSUER: Pocket ID
@@ -41,7 +41,7 @@ spec:
     - extract:
         key: cloudnative-pg
     - extract:
-        key: minio
+        key: cloudflare
     - extract:
         key: reactive-resume
     - extract:
