fix: use SSL for r2

--- a/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
+++ b/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
@@ -25,6 +25,7 @@ spec:
         STORAGE_ENDPOINT: 25450dc0f239d4e727e3488cfb31b5c4.r2.cloudflarestorage.com
         STORAGE_PORT: "443"
         STORAGE_BUCKET: assets
+        STORAGE_USE_SSL: "true"
         STORAGE_ACCESS_KEY: "{{ .AWS_ACCESS_KEY_ID }}"
         STORAGE_SECRET_KEY: "{{ .AWS_SECRET_ACCESS_KEY }}"
         DISABLE_SIGNUPS: "true"
