--- a/kubernetes/apps/default/chromium/app/helmrelease.yaml
+++ b/kubernetes/apps/default/chromium/app/helmrelease.yaml
@@ -57,7 +57,7 @@ spec:
         controller: *app
         ports:
           http:
-            port: *port
+            port: 3000
     persistence:
       tmp:
         type: emptyDir
