fix: update variable name

--- a/kubernetes/apps/default/chromium/app/helmrelease.yaml
+++ b/kubernetes/apps/default/chromium/app/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
               CONCURRENT: "10"
               EXIT_ON_HEALTH_FAILURE: "true"
               PROXY_PORT: 3000
-              PROXY_URL: chromium.default.svc.cluster.local
+              EXTERNAL: chromium.default.svc.cluster.local
             envFrom:
               - secretRef:
                   name: chromium-secret
