--- a/.renovate/packageRules.json5
+++ b/.renovate/packageRules.json5
@@ -1,11 +1,11 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "packageRules": [
+  $schema: "https://docs.renovatebot.com/renovate-schema.json",
+  packageRules: [
     {
-      "description": ["Loose versioning for non-semver containers"],
-      "matchDatasources": ["docker"],
-      "matchPackageNames": ["/plex/"],
-      "versioning": "loose"
-    }
-  ]
+      description: "Loose versioning for non-semver containers",
+      matchDatasources: ["docker"],
+      matchPackageNames: ["/plex/"],
+      versioning: "loose",
+    },
+  ],
 }
