--- a/kubernetes/apps/default/your-spotify/app/helmrelease.yaml
+++ b/kubernetes/apps/default/your-spotify/app/helmrelease.yaml
@@ -118,6 +118,7 @@ spec:
             backendRefs:
               - name: web
                 port: *webport
+    persistence:
       configs:
         existingClaim: *app
         advancedMounts:
