--- a/kubernetes/apps/default/lidarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/lidarr/app/helmrelease.yaml
@@ -42,8 +42,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/solanyn/lidarr-develop
-              tag: 2.10.1@sha256:5e03aacccb4646357ba4b94297d4f6e3ad897ee2107a4d8c07e6bdaa857c7d89
+              repository: ghcr.io/solanyn/lidarr
+              tag: 2.10.1@sha256:60834f43a9fa72e3d0060d520140b50e04c4f76fc3785c659d800e7c2161bd86
             env:
               LIDARR__APP__INSTANCENAME: Lidarr
               LIDARR__APP__THEME: dark
