chore(kubeflow): use same client secret for dex and oauth2-proxy

--- a/kubernetes/apps/kubeflow/dex/app/externalsecret.yaml
+++ b/kubernetes/apps/kubeflow/dex/app/externalsecret.yaml
@@ -16,8 +16,8 @@ spec:
         INIT_POSTGRES_USER: "{{ .KUBEFLOW_DEX_POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .KUBEFLOW_DEX_POSTGRES_PASSWORD }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
-        OIDC_CLIENT_ID: "{{ .KUBEFLOW_DEX_OIDC_CLIENT_ID }}"
-        OIDC_CLIENT_SECRET: "{{ .KUBEFLOW_DEX_OIDC_CLIENT_SECRET }}"
+        OIDC_CLIENT_ID: kubeflow-oidc-authservice
+        OIDC_CLIENT_SECRET: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
         config.yaml: |
           issuer: http://dex.dex.svc.cluster.local:5556/dex
           storage:
