chore(istio): add namespaces

--- a/kubernetes/apps/kubeflow/istio/istiod/helmrelease.yaml
+++ b/kubernetes/apps/kubeflow/istio/istiod/helmrelease.yaml
@@ -33,6 +33,8 @@ spec:
       strategy: rollback
       retries: 3
   values:
+    global:
+      istioNamespace: kubeflow
     meshConfig:
       extensionProviders:
       - name: oauth2-proxy
