--- a/kubernetes/apps/kubeflow/knative/app/helmrelease.yaml
+++ b/kubernetes/apps/kubeflow/knative/app/helmrelease.yaml
@@ -19,7 +19,7 @@ spec:
   chart:
     spec:
       chart: knative-operator
-      version: v1.11.12
+      version: 1.11.12
       sourceRef:
         kind: HelmRepository
         name: knative-operator
