--- a/kubernetes/apps/kubeflow/kserve/app/helmrelease.yaml
+++ b/kubernetes/apps/kubeflow/kserve/app/helmrelease.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   interval: 1h
   type: oci
-  url: oci://ghcr.io/kserve/charts/kserve
+  url: oci://ghcr.io/kserve/charts
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
